thong tin san pham

--- a/chodocu.html
+++ b/chodocu.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Information_Detail</title>
+    <link rel="stylesheet" type="text/css" href="node_modules\bootstrap\dist\css\bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="node_modules\font-awesome\css\font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="chodocu.css">
 </head>
+
 <body>
-    
+    <div class="infor">
+        <div class="title_status">
+            <div class="title" style="padding:10px;font-weight:bold">
+                <p>Pony pockets x Jamie chua premium stripe dress</p>
+            </div>
+
+            <div class="group_infodetail">
+                <button type="button" class="detail-info status1"><span><i class="fa fa-heart-o" aria-hidden="true"></i></span> 0</button>
+                <button type="button" class="detail-info status2">Chat</button>
+                <button type="button" class="detail-info status3">Make Offer</button>
+            </div>
+
+        </div>
+        <div class="info_detail">
+            <div class="rowItem">
+                <i class="fa fa-usd rowItemIcon"  aria-hidden="true"></i> <span class="rowItemContent">S$30</span>
+            </div>
+
+            <div class="rowItem">
+                <i class="fa fa-heart-o rowItemIcon" aria-hidden="true"></i><span class="rowItemContent">0 Likes</span>
+            </div>
+
+            <div class="rowItem">
+                <i class="fa fa-codepen rowItemIcon" aria-hidden="true"></i><span class="rowItemContent">Used</span>
+            </div>
+
+            <div class="rowItem">
+                    <i class="fa fa-bars rowItemIcon" aria-hidden="true"></i><span class="rowItemContent">In Dresses & Skirts</span>
+            </div>
+            <div class="rowItem">
+                    <i class="fa fa-info-circle rowItemIcon" aria-hidden="true"></i><span class="rowItemContent">Used once only</span>
+            </div>
+            <div class="rowItem" style="font-weight:bold;font-size:15px;color: #8f939c">
+                    <i ></i><span class="rowItemContent" >Brand</span>
+            </div>
+            <div class="rowItem">
+                    <i ></i><span class="rowItemContent">Pony pocket</span>
+            </div>
+            <div class="rowItem" style="font-weight:bold;font-size:15px;color: #8f939c">
+                    <i ></i><span class="rowItemContent">Size</span>
+            </div>
+            <div class="rowItem">
+                    <i ></i><span class="rowItemContent">S / EU 36 / UK 8 / US 4</span>
+            </div>
+        </div>
+       
+    </div>
 </body>
+
 </html>
