cập nhật xóa style

--- a/custom_item.html
+++ b/custom_item.html
@@ -23,19 +23,19 @@
             <div class="img-view">
                 <div class="img-view1">
                     <div class="itemview">
-                        <img src="image\hinh1.jpg" width="100%" height="100%">
+                        <img src="image\hinh1.jpg" />
                     </div>
 
                     <div class="itemview">
-                        <img src="image\hinh2.jpg" width="100%" height="100%">
+                        <img src="image\hinh2.jpg" />
                     </div>
 
                     <div class="itemview">
-                        <img src="image\hinh3.jpg" width="100%" height="100%">
+                        <img src="image\hinh3.jpg" />
                     </div>
 
                     <div class="itemview">
-                        <img src="image\hinh1.jpg" width="100%" height="100%">
+                        <img src="image\hinh1.jpg" />
                     </div>
                 </div>
 
@@ -78,16 +78,16 @@
                         <form>
                             <textarea class="form-control" type="textarea" 
                             placeholder="Be the first to write a public comment. Ask a question or @mention a friend to check this out!"
-                            rows="3" style="width:330px;margin: auto"></textarea>
-                            
+                            rows="3" ></textarea>
+                            <button class="btn btn-default edit" ><span>Post a New Comment</span></button>
                         </form>
-                        <button class="btn btn-default" style="margin:10px 10px;"><span>Post a New Comment</span></button>
+                        
                     </div>
                 </div>
         </div>
         <div class="infor">
             <div class="title_status">
-                <div class="title" style="padding:10px;font-weight:bold">
+                <div class="title" >
                     <p>Pony pockets x Jamie chua premium stripe dress</p>
                 </div>
 
@@ -121,13 +121,13 @@
                         once
                         only</span>
                 </div>
-                <div class="rowItem" style="font-weight:bold;font-size:15px;color: #8f939c">
+                <div class="rowItem">
                     <i></i><span class="rowItemContent">Brand</span>
                 </div>
                 <div class="rowItem">
                     <i></i><span class="rowItemContent">Pony pocket</span>
                 </div>
-                <div class="rowItem" style="font-weight:bold;font-size:15px;color: #8f939c">
+                <div class="rowItem">
                     <i></i><span class="rowItemContent">Size</span>
                 </div>
                 <div class="rowItem">
